# ChangeLog for xfce-extra/xfce4-netload
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-netload/Attic/ChangeLog,v 1.3 2003/09/08 19:59:47 bcowan Exp $

*xfce4-netload-0.2.0_pre6 (08 Sep 2003)

  08 Sep 2003; Brad Cowan <bcowan@gentoo.org> xfce4-netload-0.2.0_pre6.ebuild:
  Version bump.

*xfce4-netload-0.2.0_pre5 (03 Sep 2003)

  03 Sep 2003; Brad Cowan <bcowan@gentoo.org> xfce4-netload-0.2.0_pre5.ebuild:
  Version bump.

*xfce4-netload-0.1.3 (15 Aug 2003)

  15 Aug 2003; Brad Cowan <bcowan@gentoo.org> xfce4-netload-0.1.3.ebuild:
  Initial import.
