@@ -1,7 +1,9 @@
-MD5 2075703f2187b86c1743e33bc145ec96 xfce4-netload-0.2.0_pre6.ebuild 702
+MD5 f9e2243bbb47e215389e7c7aa7f8a3a1 ChangeLog 760
 MD5 e0dd26a18ff74c01ad7b4b57bd868033 xfce4-netload-0.1.3.ebuild 691
+MD5 917afb58ea1ab2ec3642881599df82a3 xfce4-netload-0.2.0.ebuild 694
 MD5 8cc746cea430aa2cbfe193696ab3ddd7 xfce4-netload-0.2.0_pre5.ebuild 704
-MD5 264204e02e705407293b558c7f2997a8 ChangeLog 633
+MD5 2075703f2187b86c1743e33bc145ec96 xfce4-netload-0.2.0_pre6.ebuild 702
 MD5 0586c50a3bf009059d2c4825bad0e4a2 files/digest-xfce4-netload-0.1.3 78
+MD5 2ed7c9669ba17f256455ec3d030f42c5 files/digest-xfce4-netload-0.2.0 78
 MD5 505cc12f6d09294a78a2a00759102092 files/digest-xfce4-netload-0.2.0_pre5 82
 MD5 74075a2b1b65b6950804a64851193150 files/digest-xfce4-netload-0.2.0_pre6 82
