@@ -1,6 +1,11 @@
 # ChangeLog for xfce-extra/xfce4-netload
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-netload/Attic/ChangeLog,v 1.3 2003/09/08 19:59:47 bcowan Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-netload/Attic/ChangeLog,v 1.4 2003/09/18 17:11:48 bcowan Exp $
+
+*xfce4-netload-0.2.0 (18 Sep 2003)
+
+  18 Sep 2003; Brad Cowan <bcowan@gentoo.org> xfce4-netload-0.2.0.ebuild:
+  Version bump.
 
 *xfce4-netload-0.2.0_pre6 (08 Sep 2003)
 
